# bluetooth-rust

./: Cargo.toml  README.md  bluetooth-rust_0.1.0.bb
src/: bluetooth.rs  main.rs
