[package]
name = "bluetooth-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/bluetooth-rust.git"
homepage = "https://github.com/Dhruvesh08/bluetooth-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.1", features = ["full"] }
clap = "4.4.4"
env_logger = "0.10.0"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
